gitops/applications/base/demo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
  namespace: app-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-api
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      containers:
        - name: demo-api
          image: ghcr.io/alissonmachado/demo-app:0.1.0 # {"$imagepolicy": "flux-system:demo-app"}
          ports:
            - containerPort: 8080
